--- a/apps/fita-a-fita-backend/package.json
+++ b/apps/fita-a-fita-backend/package.json
@@ -28,6 +28,7 @@
         "body-parser": "^2.2.0",
         "compression": "^1.8.0",
         "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "esbuild": "0.25.3",
         "express": "^4.21.2",
@@ -50,7 +51,7 @@
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
-        "@types/bcryptjs": "^3.0.0",
+        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
         "@types/node": "^22.15.3",
         "@types/nodemailer": "^6.4.17",
