--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
     mongodb:
         image: mongo:latest
@@ -14,6 +12,12 @@ services:
         volumes:
             - mongo-data:/data/db
             - ./apps/fita-a-fita-backend/docker/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    fita-a-fita-frontend:
+        build:
+            context: ./apps/fita-a-fita-frontend
+            dockerfile: .docker/Dockerfile
+        ports:
+            - 4321:4321
 
 volumes:
     mongo-data: # name of the volume
