feat: enhance fita-a-fita application with backend service, update docker-compose, and integrate Tailwind CSS; add global styles and various frontend components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
         {
             "mode": "auto"
         }
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "eslint.validate": ["astro"]
 }
