--- a/apps/fita-a-fita-frontend/package.json
+++ b/apps/fita-a-fita-frontend/package.json
@@ -10,10 +10,19 @@
     "dependencies": {
         "@astrojs/node": "^9.2.1",
         "@astrojs/react": "^4.2.7",
+        "@tailwindcss/vite": "^4.1.7",
         "@types/react": "^19.1.4",
         "@types/react-dom": "^19.1.5",
         "astro": "^5.7.13",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "tailwindcss": "^4.1.7"
+    },
+    "devDependencies": {
+        "@typescript-eslint/parser": "^8.32.1",
+        "eslint": "^9.25.1",
+        "eslint-plugin-astro": "^1.3.1",
+        "prettier": "^3.5.3",
+        "prettier-plugin-astro": "0.14.1"
     }
 }
