feat: implement user authentication and enhance frontend with dynamic tour fetching; add new components and update Docker configurations

--- a/apps/fita-a-fita-backend/.docker/Dockerfile
+++ b/apps/fita-a-fita-backend/.docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY . .
 RUN rm -rf .env
 RUN touch .env
-RUN echo "NODE_ENV=development" >> .env
+RUN echo "NODE_ENV=production" >> .env
 RUN echo "DATABASE=mongodb://<USER>:<PASSWORD>@mongodb:27017/fita-a-fita?retryWrites=true&w=majority" >> .env
 RUN echo "DATABASE_PASSWORD=admin" >> .env
 RUN echo "DATABASE_USER=admin" >> .env
