--- a/apps/fita-a-fita-frontend/package.json
+++ b/apps/fita-a-fita-frontend/package.json
@@ -14,11 +14,13 @@
         "@types/react": "^19.1.4",
         "@types/react-dom": "^19.1.5",
         "astro": "^5.7.13",
+        "leaflet": "^1.9.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwindcss": "^4.1.7"
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.18",
         "@typescript-eslint/parser": "^8.32.1",
         "eslint": "^9.25.1",
         "eslint-plugin-astro": "^1.3.1",
