--- a/apps/fita-a-fita-backend/package.json
+++ b/apps/fita-a-fita-backend/package.json
@@ -37,6 +37,7 @@
         "jsonwebtoken": "^9.0.2",
         "leaflet": "^1.9.4",
         "mongoose": "^8.14.1",
+        "mongoose-lean-virtuals": "^2.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.10.1",
