--- a/apps/fita-a-fita-frontend/package.json
+++ b/apps/fita-a-fita-frontend/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@astrojs/node": "^9.2.1",
         "@astrojs/react": "^4.2.7",
+        "@stripe/stripe-js": "^7.3.1",
         "@tailwindcss/vite": "^4.1.7",
         "@types/react": "^19.1.4",
         "@types/react-dom": "^19.1.5",
